Added form functionality

--- a/src/index.html
+++ b/src/index.html
@@ -11,7 +11,12 @@
       </div>
       <div class="bearForm m-2 align-self-center" id="bearForm">
       </div>
-      <div class="bearCards m-2 align-self-center" id="river">
+      <div class="bearCards m-2 align-self-center">
+        <div class="cardIntro">
+          <h4>Track the bears!</h4>
+        </div>
+        <div class="bearCardContainer d-flex flex-wrap justify-content-around p-2" id="river">
+        </div>
       </div>
     </div>
   </body>
